force-app/main/default/objects/Office_Exclusive__c/Office_Exclusive__c.object-meta.xml
<CustomObject>
    <label>Office Exclusive</label>
    <nameField>
        <displayFormat>OE-{000000}</displayFormat>
        <label>Office Exclusive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Office Exclusives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>