force-app/main/default/objects/Office_Exclusive__c/fields/List_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>List_Agent_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Agent ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Office Exclusives</relationshipLabel>
    <relationshipName>Office_Exclusives</relationshipName>
    <type>Lookup</type>
</CustomField>