force-app/main/default/objects/Office_Exclusive__c/fields/List_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>List_Agent_Name__c</fullName>
    <formula>List_Agent_ID__r.Contact__r.FirstName &amp; &quot; &quot; &amp; List_Agent_ID__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Agent Name</label>
    <type>Text</type>
</CustomField>