force-app/main/default/objects/Office_Exclusive__c/fields/List_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>List_Office_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Office Exclusives</relationshipLabel>
    <relationshipName>Office_Exclusives</relationshipName>
    <type>Lookup</type>
</CustomField>