force-app/main/default/objects/Office_Exclusive__c/fields/List_Office_Name__c.field-meta.xml
<CustomField>
    <fullName>List_Office_Name__c</fullName>
    <formula>List_Office_ID__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Office Name</label>
    <type>Text</type>
</CustomField>