force-app/main/default/objects/Office_Exclusive__c/fields/MLS__c.field-meta.xml
<CustomField>
    <fullName>MLS__c</fullName>
    <label>MLS #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>