force-app/main/default/objects/Office_Exclusive__c/fields/MLS_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>MLS_Entry_Date__c</fullName>
    <label>MLS Entry Date</label>
    <type>Date</type>
</CustomField>