force-app/main/default/objects/Office_Exclusive__c/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Office Exclusives (Parent Account)</relationshipLabel>
    <relationshipName>Office_Exclusives1</relationshipName>
    <type>Lookup</type>
</CustomField>