force-app/main/default/objects/Office_Exclusive__c/fields/Seller_Landlord_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Seller_Landlord_Name_2__c</fullName>
    <label>Seller/Landlord Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>