force-app/main/default/objects/Office_Exclusive__c/fields/UniqueOfficeExclusiveCount__c.field-meta.xml
<CustomField>
    <fullName>UniqueOfficeExclusiveCount__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Office Exclusive Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>