force-app/main/default/objects/Office_Exclusive__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Apt/Suite</label>
    <length>50</length>
    <type>Text</type>
</CustomField>