force-app/main/default/objects/Office_Exclusive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>List_Agent_Name__c</columns>
    <columns>List_Office_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>